# AIthing

./: .gitattributes  .gitignore  Dockerfile  Makefile  README.md  compose.yaml  index.html  pyproject.toml  site-config.json  system_prompt.example.txt
.github/workflows/: pages.yml
configs/: quick.json
pages/: site-config.json
pages/data/: demo-events.json  layout.json
pages/model/: config.json  tokenizer.json
scripts/: build_pages.py  export_browser_model.py  export_pages_demo.py
tests/: conftest.py  test_api.py  test_engine.py  test_model_data.py  test_pages.py  test_smoke.py  test_tokenizer_chat.py  test_visualizer.py
tinyllm/: __init__.py  api.py  chat.py  checkpoint.py  cli.py  config.py  data.py  engine.py  model.py  prepare.py  retrieval.py  tokenizer.py  train.py  visualizer.py
tinyllm/static/: app.js  browser-model.js  index.html  style.css  tiny-tokenizer.js
